# tangara-evaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: evaluation.ipynb  hum_raw.ipynb  pm25_raw.ipynb  tangaras.ipynb  temp_raw.ipynb
src/: README.md  example.env
src/notebooks/: aqi_epa_pm25.ipynb  hum_raw.ipynb  pm25_clean.ipynb  pm25_raw.ipynb  pm25_to_aqi.ipynb  tangaras.ipynb  temp_raw.ipynb  utils.ipynb
src/scripts/: README.md  last_12h.sh  last_24h.sh  last_4h.sh  last_8h.sh  last_hour.sh  x_time.sh
